--- a/unit1.lfm
+++ b/unit1.lfm
@@ -7,6 +7,7 @@ object Form1: TForm1
   ClientHeight = 308
   ClientWidth = 360
   OnShow = FormShow
+  Position = poScreenCenter
   LCLVersion = '3.8.0.0'
   object imgCaptcha: TImage
     Left = 56
